[package]
name = "domoc"
version = "0.1.0"
authors = ["Ayke van Laethem <aykevanlaethem@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
chrono = "0.2"
crc8 = "0.1"
serde = "0.8"
serde_json = "0.8"
spidev = "0.2"
env_logger = "0.3"
ws = { version = "0.5", features = ["ssl"] }
